# unix

./: .cirrus.yml  .darcs-boring  .gitignore  .travis.yml  Makefile  README.md  aclocal.m4  cabal.config.wasm32-wasi  cabal.haskell-ci  cabal.project  cabal.project.js  cabal.project.wasm32-wasi  changelog  changelog.md  config.guess  configure.ac  package.conf.in  test-wasm32-wasi.mjs  unix.buildinfo.in  unix.cabal  unix.conf.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: env.sh
.github/workflows/: ci-js.yml  ci-wasm32-wasi.yml  ci.yml  haskell-ci.yml
Network/: Sendfile.hsc
System/: DL.hs  Posix.hs  Sendfile.hsc
System/DL/: DLPrim.hsc  Module.hs
System/Posix/: ByteString.hs  Directory.hsc  DynamicLinker.hsc  Env.hsc  Error.hs  Fcntl.hsc  Files.hsc  IO.hsc  PosixString.hs  Process.hsc  Resource.hsc  Semaphore.hsc  SharedMem.hsc  Signals.hs  Signals.hsc  Temp.hsc  Terminal.hsc  Time.hs  Time.hsc  Unistd.hsc  User.hsc
System/Posix/ByteString/: FilePath.hsc
System/Posix/Directory/: ByteString.hsc  Common.hsc  Fd.hsc  Internals.hsc  PosixPath.hsc
System/Posix/DynamicLinker/: ByteString.hsc  Common.hsc  Module.hsc  Prim.hsc
System/Posix/DynamicLinker/Module/: ByteString.hsc
System/Posix/Env/: ByteString.hsc  Internal.hsc  PosixString.hsc
System/Posix/Files/: ByteString.hsc  Common.hsc  PosixString.hsc
System/Posix/IO/: ByteString.hsc  Common.hsc  PosixString.hsc
System/Posix/PosixPath/: FilePath.hsc
System/Posix/Process/: ByteString.hsc  Common.hsc  Internals.hs  Internals.hsc  PosixString.hsc
System/Posix/Signals/: Exts.hsc
System/Posix/Temp/: ByteString.hsc  PosixString.hsc
System/Posix/Terminal/: ByteString.hsc  Common.hsc  PosixString.hsc
System/Posix/User/: ByteString.hsc  Common.hsc
cbits/: HsUnix.c  Makefile  ctermid.c  dirUtils.c  execvpe.c  ghcrts.c  tcdrain.c
hugs/: exclude
impls/Str/: ByteString.hs  String.hs
include/: HsUnix.h  Makefile  execvpe.h
jsbits/: time.js
tests/: .gitignore  DirEnt.c  DirEnt.hs  DirEnt.hsc  DirEntType.hs  FdReadBuf001.hs  FileExtendedStatus.hs  FileStatus.hs  FileStatusByteString.hs  ForkProcess01.hs  Posix004.hs  Posix009.hs  Posix014.hs  PutEnv001.hs  ReadDirStream.hs  ResourceLimit.hs  Semaphore001.hs  Semaphore002.hs  SemaphoreInterrupt.hs  Signals001.hs  Signals002.hs  Signals004.hs  T13660.hs  T8108.hs  Terminal.hs  Test.hs  Test.hsc  all.T  fileStatus.hs  fileStatusByteString.hs  getGroupEntryForName.stderr  getUserEntryForName.stderr  signals001.hs  signals004.hs  user001.hs  user001.stdout
tests/libposix/: all.T  posix004.hs  posix005.hs  posix005.stdout
unix-indef/: Str.hsig
unix-indef/System/Posix/: Env.hsc
