name:           unix
version:        2.7.1.0
-- NOTE: Don't forget to update ./changelog.md
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
homepage:       https://github.com/haskell/unix
bug-reports:    https://github.com/haskell/unix/issues
synopsis:       POSIX functionality
category:       System
build-type:     Configure
cabal-version:  >= 1.10
tested-with:    GHC>=7.4.1
description:
    This package gives you access to the set of operating system
    services standardised by POSIX 1003.1b (or the IEEE Portable
    Operating System Interface for Computing Environments -
    IEEE Std. 1003.1).
    .
    The package is not supported under Windows (except under Cygwin).

extra-source-files:
    changelog.md
    config.guess
    config.sub
    configure
    configure.ac
    include/HsUnix.h
    include/HsUnixConfig.h.in
    install-sh
    unix.buildinfo.in

extra-tmp-files:
    autom4te.cache
    config.log
    config.status
    include/HsUnixConfig.h
    unix.buildinfo

source-repository head
    type:     git
    location: https://github.com/haskell/unix.git

library
    default-language: Haskell2010
    other-extensions:
        CApiFFI
        CPP
        DeriveDataTypeable
        InterruptibleFFI
        NondecreasingIndentation
        OverloadedStrings
        RankNTypes
        RecordWildCards

    if impl(ghc)
        other-extensions:
            Safe
            Trustworthy

    build-depends:
        base        >= 4.5     && < 4.9,
        bytestring  >= 0.9.2   && < 0.11,
        time        >= 1.2     && < 1.6

    exposed-modules:
        System.Posix
        System.Posix.ByteString

        System.Posix.Error
        System.Posix.Resource
        System.Posix.Time
        System.Posix.Unistd
        System.Posix.User
        System.Posix.Signals
        System.Posix.Signals.Exts
        System.Posix.Semaphore
        System.Posix.SharedMem

        System.Posix.ByteString.FilePath

        System.Posix.Directory
        System.Posix.Directory.ByteString

        System.Posix.DynamicLinker.Module
        System.Posix.DynamicLinker.Module.ByteString
        System.Posix.DynamicLinker.Prim
        System.Posix.DynamicLinker.ByteString
        System.Posix.DynamicLinker

        System.Posix.Files
        System.Posix.Files.ByteString

        System.Posix.IO
        System.Posix.IO.ByteString

        System.Posix.Env
        System.Posix.Env.ByteString

        System.Posix.Fcntl

        System.Posix.Process
        System.Posix.Process.Internals
        System.Posix.Process.ByteString

        System.Posix.Temp
        System.Posix.Temp.ByteString

        System.Posix.Terminal
        System.Posix.Terminal.ByteString

    other-modules:
        System.Posix.Directory.Common
        System.Posix.DynamicLinker.Common
        System.Posix.Files.Common
        System.Posix.IO.Common
        System.Posix.Process.Common
        System.Posix.Terminal.Common

    ghc-options: -Wall

    include-dirs: include
    includes:
        HsUnix.h
        execvpe.h
    install-includes:
        HsUnix.h
        execvpe.h
    c-sources:
        cbits/HsUnix.c
        cbits/dirUtils.c
        cbits/execvpe.c
        cbits/ghcrts.c
